frontend/tests/cases/positive/kind-inference/fix.gr
data Fix (f : Type -> Type) = Fix (f (Fix f))

unfix : forall a : Type, f : Type -> Type . Fix f -> f (Fix f)
unfix (Fix x) = x