frontend/tests/cases/negative/flatten/flattenNatEq.gr
flattenNatEq : forall m : Nat=, n : Nat= . (Int |m|) |n| -> Int |m + n|
flattenNatEq ||x|| = |x|
